调整数据写法